# Hunter-Tools

./: .gitignore  README.md  config.yaml  prd.md  pyproject.toml  requirements.txt  score.yaml  score_filter.yaml
docs/: technical-execution.md  zero-to-hrbp-frankfurt-guide.md
git checkout -b feature/: strongfilter
outputs/: real_run.csv
outputs/raw_pages/: 20260421T144858Z_q9494618663_p1_s0_selenium.html  20260421T144858Z_q9494618663_p1_s0_selenium.json  20260421T144859Z_qdc3541b2e2_p1_s0_selenium.html  20260421T144859Z_qdc3541b2e2_p1_s0_selenium.json  20260423T031156Z_q1130b19d2f_p1_s0_selenium.html  20260423T031156Z_q1130b19d2f_p1_s0_selenium.json  20260423T031159Z_q1130b19d2f_p2_s10_selenium.html  20260423T031159Z_q1130b19d2f_p2_s10_selenium.json  20260423T031202Z_q1130b19d2f_p3_s20_selenium.html  20260423T031202Z_q1130b19d2f_p3_s20_selenium.json  20260423T031204Z_q1130b19d2f_p4_s30_selenium.html  20260423T031204Z_q1130b19d2f_p4_s30_selenium.json  20260423T031207Z_q1130b19d2f_p5_s40_selenium.html  20260423T031207Z_q1130b19d2f_p5_s40_selenium.json
score_dictionary/: devops.yaml  hrbp.yaml  sde.yaml
src/hunter_tools/: __init__.py  config.py  exporter.py  google_client.py  google_page.py  location_expansion.json  location_expansion.py  main.py  models.py  parser.py  pipeline.py  query_builder.py  scorer.py  selenium_client.py  settings.py  utils.py
tests/: test_google_client_parse.py  test_parser_and_scorer.py  test_query_builder.py  test_resilience.py
