[project]
name = "hunter-tools"
version = "0.1.0"
description = "Google X-Ray candidate sourcing MVP for HRBP demos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.0,<5.0.0",
  "selenium>=4.21.0,<5.0.0",
  "dynaconf>=3.2.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
]

[project.scripts]
hunter-tools = "hunter_tools.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
